_gi.Repository : Implement missing info bindings.

https://bugzilla.gnome.org/show_bug.cgi?id=632185